# ATSPM_Aggregation

./: .gitattributes  Aggregations.py  Daily_Downloader.py  DataProcessing.py  GetData.py  LICENSE  MANIFEST.in  README.md  pyproject.toml  queries.sql  sample_detector-config.parquet  sample_hi-res_data.parquet
SQL/: Actuations.sql  Arrival_On_Green.sql  Communications.sql  Coordination.sql  MaxOuts.sql  MaxTimeFaults.sql  Ped.sql  SplitFail.sql  Splits.sql  Unique_Ped_Actuations.sql
sample_data/: devices.csv  filtered_ped_data.parquet
src/atspm/: Aggregations.py  __init__.py  data_aggregator.py  data_loader.py  data_saver.py  queries.sql  sample_data.py  signal_data_processor.py  utils.py
src/atspm/data/: sample_config.parquet  sample_raw_data.parquet
src/atspm/queries/: actuations.sql  arrival_on_green.sql  communications.sql  coordination.sql  detector_faults.sql  full_ped.sql  has_data.sql  ped.sql  split_failures.sql  splits.sql  terminations.sql  timeline.sql  unique_ped.sql  yellow_red.sql
